back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  labels:
    name: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: abdelrahmankh/back
        imagePullPolicy: IfNotPresent
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: back
  labels:
    service: back
spec:
  selector:
    app: back
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
