ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: my-ingress
  annotations:
spec:
  rules:
  - host: hi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 8080
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 5000
